--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
   "dependencies": {
     "@headlessui/vue": "^1.7.17",
     "@heroicons/vue": "^2.1.1",
-    "iconify": "^1.4.0",
     "lucide-react": "^0.317.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
     "react-pdf": "^7.7.0",
     "react-router-dom": "^6.21.3",
     "typewriter-effect": "^2.21.0"
